--- a/styles/darksun-psionics.css
+++ b/styles/darksun-psionics.css
@@ -1,3 +1,4 @@
-.meter-group .power-points .progress.power-points {
-    --bar-color: #ffff1e;
+.meter.sectioned.power-points .progress.power-points::before {
+    background: linear-gradient(to right, #1e90ff 0%, #87cefa 100%) !important;
+    border-inline-end: 1px solid #0000ff !important;
 }
